--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "granna",
   "productName": "Granna",
-  "version": "1.2.10",
+  "version": "1.3.1",
   "description": "My Electron application description",
   "main": ".vite/build/main.js",
   "scripts": {
@@ -65,9 +65,9 @@
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
+    "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-inlinesvg": "^4.1.3",
-    "react-input-color": "^4.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "redux": "^5.0.1",
