--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "granna",
   "productName": "Granna",
-  "version": "1.3.1",
-  "description": "My Electron application description",
+  "version": "1.4.1",
+  "description": "App para controle financeiro pessoal",
   "main": ".vite/build/main.js",
   "scripts": {
     "start": "electron-forge start",
